# CI_2022_s292623

./: README.md  pyproject.toml
lab1/: README.md  lab1.ipynb
lab2/: README.md  lab2.ipynb
lab3/: README.md  lab3_nim.ipynb
