[tool.black]
exclude = "(^\\.|^__pycache__)"
include = "(\\.py$|\\.ipynb$)"
#include = "\\.ipynb"
line-length = 120

[tool.poetry]
name = "ci22_s292623"
version = "0.1.0"
description = "Code of CI laboratories"
authors = ["Luca Mistruzzi <s292623@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
black = {extras = ["jupyter"], version = "^22.6.0"}
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
nero = {extras = ["jupyter"], version = "^1.0.20220202"}
networkx = "^2.8.5"
numpy = ">=1.23"
pandas = "^1.4.3"
pydot = "^1.4.2"
python = "~3.10"
scipy = "^1.9.0"
seaborn = "^0.11.2"
toml = "^0.10.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
